# rig-repl

./: Cargo.toml  FEEDBACK.md  Makefile  README.md  setup_env.sh
docs/v2/: README.md
docs/v3/: README.md
source/v2/: UniswapV2Factory.sol  UniswapV2Pair.sol
source/v2/interfaces/: IUniswapV2Factory.sol  IUniswapV2Pair.sol
source/v3/: UniswapV3Factory.sol  UniswapV3Pool.sol
source/v3/interfaces/: IUniswapV3Factory.sol  IUniswapV3Pool.sol
src/: main.rs  rag_builder.rs  rag_middleware.rs  rig_agent.rs
src/common/: mod.rs
