[package]
name = "rig-repl"
version = "0.1.0"
edition = "2024"

[dependencies]
rig-core = { version = "0.16.0", features = ["mcp"] }
mcp-core = { version = "0.1.50", features = ["sse"] }
rustyline = "15.0.0"
anyhow = "1.0.98"
tokio = { version = "1.45.0", features = ["tokio-macros", "rt", "rt-multi-thread", "macros"] }
