[package]
name = "rig-repl"
version = "0.1.0"
edition = "2024"

[dependencies]
rig-core = { version = "0.16.0", features = ["mcp", "derive"] }
mcp-core = { version = "0.1.50", features = ["sse"] }
rustyline = "15.0.0"
anyhow = "1.0.98"
tokio = { version = "1.45.0", features = ["tokio-macros", "rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0.219", features = ["derive"] }
walkdir = "2.5.0"
text-splitter = { version = "0.26.0", features = ["markdown", "code"] }
tree-sitter-solidity = "1.2.11"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
